# bi_extractor

./: BI_Metadata.csv  README.md  bi-extractor-gui.spec  pyproject.toml  test.pbix
.claude/: settings.local.json
.omc/: project-memory.json
.omc/plans/: gui-implementation.md  open-questions.md  universal-bi-extractor.md
.omc/prompts/: gemini-inline-you-are-analyzing-requirements-for-a-major-project-697ed1f1.md
.omc/sessions/: 1a599b20-b713-4a67-85ab-12d8393e0f14.json  2584b07e-443d-4915-b05b-fbb2aff424c5.json  32ce376a-d23f-4df4-8a5c-b99e793582a1.json  3a3b6d37-6620-4e50-a6f4-eeedc8243100.json  5b4eb805-3188-4dec-8265-0b16675cd6f5.json  72a35e0b-909f-43a2-b935-77251d3d9c6b.json  8815092b-960f-468d-ab5b-2c7ea5f4dcff.json  ba0a86e9-99ee-4679-ba59-4fa181a79e31.json
.omc/state/: agent-replay-0afbc7bb-345c-4aa8-906f-f414c6cc30af.jsonl  agent-replay-15914c3e-90db-40fc-9cc6-699ecc9b971d.jsonl  agent-replay-4e06e5f5-4cc7-40ba-815e-f1ec2df4e5b6.jsonl  agent-replay-5832a772-0630-4610-8ed2-a92409ddd99a.jsonl  agent-replay-aacbb175-6f20-4d1d-b121-077c5a3af0dd.jsonl  agent-replay-c1f74a35-ae31-4b39-8350-a838639c2d0f.jsonl  ralph-state.json  subagent-tracking.json  (+2 more)
bi_extractor/: __init__.py
bi_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
legacy/: tableau_metadata_extractor.py
tests/: conftest.py  test_base_parser.py  test_birt_parser.py  test_cli.py  test_cognos_cpf_parser.py  test_cognos_deployment_parser.py  test_gui_dnd.py  test_gui_worker.py  test_hyper_parser.py  test_jrxml_parser.py  test_models.py  test_mstr_parser.py  test_pbix_parser.py  test_qvd_parser.py  test_qvf_parser.py  test_registry.py  test_sql_extraction.py  test_ssrs_parser.py  test_tableau_parser.py  test_tds_parser.py  test_xdo_parser.py
tmp_test_output/: BI_Metadata.csv
(+43 files in other folders)
